--- a/r5sw/r5sw.vcxproj
+++ b/r5sw/r5sw.vcxproj
@@ -42,15 +42,16 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <SpectreMitigation>false</SpectreMitigation>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -132,13 +133,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="protected.cpp" />
     <ClCompile Include="r5sw.cpp" />
+    <ClCompile Include="tools.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="defs.h" />
+    <ClInclude Include="inc\defs.h" />
+    <ClInclude Include="inc\include.h" />
     <ClInclude Include="spoofers\beakers\beakers.h" />
     <ClInclude Include="spoofers\namazso\namazso.h" />
-    <ClInclude Include="tools.h" />
+    <ClInclude Include="inc\tools.h" />
   </ItemGroup>
   <ItemGroup>
     <MASM Include="spoofers\beakers\beakers.asm" />
