enable /MP for faster compilation

--- a/r5sw/r5sw.vcxproj
+++ b/r5sw/r5sw.vcxproj
@@ -124,6 +124,7 @@
       <Optimization>Disabled</Optimization>
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
